--- a/Source/templates/infras.html
+++ b/Source/templates/infras.html
@@ -1,23 +1,17 @@
-{% extends "layout.html" %}
-
-{% block css %}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/fontawesome/css/all.css')}}" />
-    <link rel="stylesheet" href="../static/css/toggles.css" />
-    <link rel="stylesheet" href="../static/css/infras.css" />
-    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-    {% block main_form_css %}
-    {% endblock %}
-    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-{% endblock %}
-
-{%block content%}
+{% extends "layout.html" %} {% block css %}
+<link rel="stylesheet" href="{{url_for('static',filename='css/fontawesome/css/all.css')}}" />
+<link rel="stylesheet" href="../static/css/toggles.css" />
+<link rel="stylesheet" href="../static/css/infras.css" />
+<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet"> {% block main_form_css %} {% endblock %}
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+{% endblock %} {%block content%}
 
 
 <div class="main_form">
     <div class="row layout-buttons-div">
-        <input id = "project_toggle" type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
-        <button id = "Save_Project" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
-        <button id = "Delete_Project" role="button"><i class="far fa-trash-alt adapt-icon-size"></i></button>
+        <input id="project_toggle" type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
+        <button id="Save_Project" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
+        <button id="Delete_Project" role="button"><i class="far fa-trash-alt adapt-icon-size"></i></button>
     </div>
     <div class="form-inline">
         <label for="project_select" class="project-label"><h3>Project</h3></label>
@@ -31,10 +25,10 @@
     <hr>
 
     <div class="row layout-buttons-div">
-        <input type="checkbox" id = "site_toggle" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
-        <button  id="Save_Site" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
-        <button  id="Duplicate_Site"><i class="far fa-file-alt adapt-icon-size"></i></button>
-        <button  id="Delete_Site"><i class="far fa-trash-alt adapt-icon-size"></i></button>
+        <input type="checkbox" id="site_toggle" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
+        <button id="Save_Site" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
+        <button id="Duplicate_Site"><i class="far fa-file-alt adapt-icon-size"></i></button>
+        <button id="Delete_Site"><i class="far fa-trash-alt adapt-icon-size"></i></button>
     </div>
     <div class="row site-data-div">
         <div class="col-5 mb-auto first-column">
@@ -87,7 +81,7 @@
                     <option value="Site3">IP3</option>
                 </select> -->
                 <!-- <a href="" class="medium-margin" role="button"><i class="far fa-edit"></i></a> -->
-                <button  id = "check_Recording_DB_IP" class="medium-margin"><i class="far fa-check-square"></i></button>
+                <button id="check_Recording_DB_IP" class="medium-margin"><i class="far fa-check-square"></i></button>
             </div>
             <div class="form-inline">
                 <label for="excersice_db_ip"><h5>Excersice DB IP</h5></label>
@@ -99,11 +93,11 @@
                     <option value="Site3">IP3</option>
                 </select>
                 <a href="" class="medium-margin" role="button"><i class="far fa-edit"></i></a> -->
-                <button id="check_excersice_db_ip" class="medium-margin" ><i class="far fa-check-square"></i></button>
+                <button id="check_excersice_db_ip" class="medium-margin"><i class="far fa-check-square"></i></button>
             </div>
             <div class="form-inline">
 
-               <label for="auto_run_DB_IP"><h5>Auto run DB IP</h5> </ label>
+                <label for="auto_run_DB_IP"><h5>Auto run DB IP</h5> </ label>
                <input type="text" id="auto_run_DB_IP" class="form-control medium-margin">
 
                 <!-- <select name="" id="auto_run_DB_IP" class="form-control medium-margin input-medium-size">
