--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -1,6 +1,10 @@
 {% extends "layout.html"%} {% block css %}
 <link rel="stylesheet" href="{{url_for('static',filename='css/fontawesome/css/all.css')}}" />
+<link rel="stylesheet" href="../static/css/draggable_list.css">
+<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../static/css/run_stage_definition.css" />
 <link rel="stylesheet" href="../static/css/styles.css" /> {% endblock %} {%block content%}
+
 
 
 
@@ -60,7 +64,7 @@
 
                 <div class="row">
                     <div class="function-input-row col-5">
-                        <label>Function Name</label>
+                        <label><strong>Function Name</strong></label>
                         <input class="form-control" type="text" name="name"></input>
                     </div>
                     <div class="function-input-row col-3">
@@ -103,7 +107,7 @@
                         <label>Function Location</label>
                         <input class="form-control" type="text" id="functionLocation" name="Location"></input>
 
-                        <!-- 
+                        <!--
                       <div class="custom-file input-group">
                         <input class="custom-file-input" type="file" id="functionLocation" name="location" aria-describedby="myInput">
                         <label class="custom-file-label" id="functionLocationLabel" for="myInput">Choose file</label>
@@ -145,24 +149,19 @@
 
 
             <div class="input-groups-data col-3">
+              <div class="function-input-row col-12">
                 <label for="group_input">Groups</label>
-                <div class="input-group">
+                <button type="button" name="button" id = "newGroupButton" data-toggle="modal" data-target="#defineGroupModal" >   <i class="fa fa-plus-circle" aria-hidden="true"></i> </button>
+              </div>
 
-                    <input list="groups_datalist" id="group_input" type="text" class="form-control ml-2" aria-label="Text input with segmented dropdown button">
-                    <div class="input-group-append">
-                        <button type="button" class="btn btn-outline-dark btn-secondary">+</button>
-                        <button type="button" class="btn btn-outline-dark btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <span class="sr-only">Toggle Dropdown</span>
-                        </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div role="separator" class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
-                    </div>
+
+                <div class="function-input-row col-12 input-group mb-3">
+                  <input type="text" list="groups_datalist" id="group_input" class="form-control" placeholder="..."  aria-describedby="basic-addon2">
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-secondary addGroupButton" id="addGroupButton" type="button">Add</button>
+                  </div>
                 </div>
+
 
                 <!-- <input type="text" class="form-control ml-2"><span>+</span> -->
                 <datalist id="groups_datalist">
@@ -170,7 +169,7 @@
                   <option value="group2">group2</option>
                   <option value="group3">group3</option>
                 </datalist>
-                <ul id="GroupsList">
+                <ul name= "GroupsListNames" id="GroupsList">
                     <!-- <li>group1</li>
                     <li>group2</li>
                     <li>group3</li>
@@ -201,7 +200,7 @@
     </div>
 
 
-    <div class="card bg-light mb-3 main-form-card">
+    <div id="input_parameters" class="card bg-light mb-3 main-form-card">
         <div class="row card-body main-form-card-body">
             <label>Inputs:</label>
             <button name="plus_param_row_button" class="ml-auto"> <i class="fas fa-plus-circle"></i></button>
@@ -240,6 +239,7 @@
 
 </section>
 
+
 <!-- <section id = "Tree">
         <div class="card bg-light mb-3 main-form-card">
             <div class="row card-body main-form-card-body">
@@ -259,7 +259,77 @@
             </div>
         </div>
     </section> -->
-{%endblock%} {%block scripts%}
-<!-- <script src="../static//js/jquery_3_4_1_min.js"></script> -->
+
+    <div class="modal fade" id="defineGroupModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Define Group</h5>
+
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" id=ModalGroupBody>
+              <div  id="analyse_stage_div">
+                <div class="form-inline">
+                  <h2 class="mx-auto stage-headline displayInline">Analyse Stage</h2>
+                  <!-- <a href="" role="button" class = "displayInline medium-margin-right medium-icon" ><i class="fas fa-check-circle green-control"></i></a> -->
+                </div>
+                <hr>
+                <div class="row mr-3">
+                  <div class="col-5">
+                    <input class="display-block" type="checkbox" checked data-toggle="toggle" data-on="Group" data-off="Function" data-style="ios">
+                    <!-- <h1>Select a group</h1> -->
+                    <div class="list" >
+                      <div>
+                        <input list='some_datalist' type="text" class="input form-control" placeholder="Add a group to your list"/>
+                        <div class="add"><input class="btn btn-sm btn-primary" type="button" value="add"></div>
+                      </div>
+                        <datalist id='some_datalist'>
+                            <option value="data1"></option>
+                            <option value="data3"></option>
+                            <option value="data4"></option>
+                            <option value="data2"></option>
+                        </datalist>
+                    </div>
+                  </div>
+                  <div class="col-1 seperators-div">
+                    <i class="fas fa-circle seperator"></i>
+                    <i class="fas fa-circle seperator"></i>
+                    <i class="fas fa-circle seperator"></i>
+                  </div>
+                  <div class="col-5 mx-auto">
+                    <label for="chosen_list" class="draagable-ul-title"><h5>Chosen list:</h5></label>
+                    <ul class='draggble_ul list-div' id="chosen_list">
+                        <li class="draggable" draggable="true">HTML</li>
+                        <li class="draggable" draggable="true">CSS</li>
+                        <li class="draggable" draggable="true">JavaScript</li>
+                        <li class="draggable" draggable="true">PHP</li>
+                        <li class="draggable" draggable="true">MySQL</li>
+                    </ul>
+                  </div>
+                  <div class="col-1">
+                    <a href="" role="button" class="drag_to_remove"><i class="far fa-trash-alt"></i></a>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" id=confirm_delete_button>Apply</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+{%endblock%}
+{%block scripts%}
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+<script src="../static/js/draggble_list.js"></script>
 <script src="../static//js/Functions_Definitions.js"></script>
+
 {%endblock%}
